[tool.poetry]
name = "epimetheus"
version = "0.1.0"
description = "Simplified prometheus client library"
authors = ["neumond <knifeslaughter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
