[tool.poetry]
name = "epimetheus"
version = "0.1.0"
description = "Simplified prometheus client library"
authors = ["neumond <knifeslaughter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^18.2"
cached-property = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-freezegun = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
